keycloak-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: keycloak
  labels:
    service: keycloak
  name: keycloak
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        service: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
