postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: keycloak
  name: postgres
  labels:
    service: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data-vol
      restartPolicy: Always
      volumes:
      - name: postgres-data-vol
        persistentVolumeClaim:
          claimName: postgres-data-pvc
status: {}
