keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  labels:
    service: keycloak
  name: keycloak
spec:
  ports:
  - port: 8080
  selector:
    service: keycloak
  type: NodePort
