postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  labels:
    service: postgres
  name: postgres-keycloak
spec:
  ports:
  - name: "5432"
    port: 5432
  selector:
    service: postgres
  type: ClusterIP
status:
  loadBalancer: {}
