keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: keycloak
  name: keycloak-ingress
spec:
  backend:
    serviceName: keycloak
    servicePort: 8080
